--- a/.github/workflows/deploy to github pages.yml
+++ b/.github/workflows/deploy to github pages.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Deploy to github pages
 
 # Controls when the action will run. 
 on:
@@ -21,13 +21,13 @@ jobs:
         uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
         with:
           persist-credentials: false
- 
-      - name: Add settings file
-        id: add-settings-file
+
+      - name: Create settings file
+        id: add-settings
         uses: jsdaniell/create-json@1.1.2
         with:
           name: "settings.json"
-          json: "{}"
+          json: "{}"  
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
