--- a/.github/workflows/deploy to aws test.yml
+++ b/.github/workflows/deploy to aws test.yml
@@ -33,9 +33,10 @@ jobs:
           name: "settings.json"
           json: "{}"  
 
-      - name: Install and Build 🔧
+      - name: Install, Check and Build 🔧
         run: |
           yarn install
+          yarn run check
           yarn run build
            
       - name: Deploy to aws 🚀
